# cihai

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .python-version  .tmuxp-py3.yaml  .tmuxp.yaml  .tool-versions  .travis.yml  AGENTS.md  CHANGES  CITATION.cff  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  TODO  bootstrap_env.py  conftest.py  justfile  package_metadata.py  pyproject.toml  requirements.pip  run-tests.py  run_tests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  docs.yml  publish-docs.yml  test-cihai-cli.yml  test-cihai.yml  test-unihan-db.yml  test-unihan-etl.yml  test.yml  tests.yml
cihai/: __about__.py  __init__.py  __main__.py  _compat.py  bootstrap.py  cihai.py  cli.py  conf.py  config.py  config.yml  constants.py  conversion.py  core.py  db.py  exc.py  extend.py  extension.py  log.py  test.py  unihan.py  util.py  utils.py
cihai/_vendor/: genUnicode.py
cihai/datasets/: __init__.py  decomp.py  unihan.py
cihai/testsuite/: __init__.py  cihai.py  config.yml  conversion.py  datasets.py  genUnicode.py  helpers.py  test_cihai.py  test_config.yml  test_conversion.py  test_sqlalchemy.py  test_unihan.py  unihan.py  util.py
cihai/unihan/: bootstrap.py  dataset.py
conf/: default.yml
dev/: config.yml
doc/: Makefile  about.rst  api.rst  cli.rst  conf.py  datasets.rst  examples.rst  extend.rst  extending.rst  features.rst  glossary.rst  index.rst  information_liberation.rst  internals.rst  requirements.pip  spec.rst  troubleshooting.rst  usage.rst
doc/_static/: cihai.css
doc/_templates/: layout.html  more.html  star.html
doc/design-and-planning/: index.rst
doc/lore/: index.rst  information_liberation.rst  internals.rst  spec.rst
docs/: AGENTS.md  Makefile  api.md  conf.py  datasets.md  datasets.rst  examples.md  extend.md  extend.rst  features.md  glossary.md  glossary.rst  history.md  index.md  justfile  manifest.json  pyproject.toml  pytest-plugin.md  quickstart.md  redirects.txt  troubleshooting.md  usage.md  usage.rst
docs/_templates/: layout.html  page.html
docs/api/: config.md  constants.md  conversion.md  core.md  db.md  exc.md  extend.md  index.md  log.md  types.md  utils.md
docs/api/data/: index.md  unihan.md
docs/api/internals/: config_reader.md  types.md
docs/cihai/: datasets.md  examples.md  glossary.md  history.md  index.md
docs/cihai-cli/: Makefile  cli.md  index.md  manifest.json  usage.md
docs/contributing/: index.md  workflow.md
docs/datasets/: index.md  unihan.md
docs/design-and-planning/: index.md  index.rst
docs/design-and-planning/2013/: extending.md  information_liberation.md  information_liberation.rst  internals.md  spec.md  spec.rst
docs/design-and-planning/2017/: spec.md  spec.rst
docs/design-and-planning/2018/: plugin-system.md  plugin-system.rst
docs/how-to/: configuration.md  index.md
docs/internals/: index.md
docs/internals/api/: config_reader.md  index.md  types.md
docs/project/: code-style.md  contributing.md  index.md  releasing.md
docs/topics/: examples.md  extending.md  features.md  index.md  troubleshooting.md
docs/unihan-db/: index.md
docs/unihan-etl/: index.md  unihan.md
examples/: __init__.py  basic_usage.py  basic_usage_manual.py  dataset.py  variant_ts_difficulties.py  variants.py
libunihan/: __init__.py  __main__.py  conversion.py  log.py  unihan.py  util.py
libunihan/testsuite/: __init__.py  helpers.py  test_conversion.py  test_sqlalchemy.py  test_unihan.py
requirements/: base.txt  cli.txt  dev.txt  doc.txt  test.txt
src/cihai/: MANIFEST.in  Makefile  README.md  __about__.py  __init__.py  config.py  config_reader.py  constants.py  conversion.py  core.py  db.py  exc.py  extend.py  log.py  pyproject.toml  pytest_plugin.py  types.py  utils.py
src/cihai-cli/: .gitignore  .tmuxp.yaml  CHANGES  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
src/cihai-cli/.github/workflows/: publish-docs.yml
src/cihai-cli/cihai_cli/: __about__.py  cli.py
src/cihai-cli/docs/: api.md  conf.py  index.md
src/cihai-cli/tests/: conftest.py  test_cli.py
src/cihai-cli/tests/fixtures/: Unihan_IRGSources.txt
src/unihan-db/: .coveragerc  .gitignore  .tmuxp.yaml  CHANGES  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
src/unihan-db/.github/workflows/: publish-docs.yml
src/unihan-db/docs/: Makefile  api.md  conf.py  index.md  manifest.json
src/unihan-db/examples/: 01_bootstrap.py
src/unihan-db/tests/: conftest.py  test_bootstrap.py
src/unihan-db/tests/fixtures/: Unihan_DictionaryLikeData.txt  Unihan_IRGSources.txt  Unihan_OtherMappings.txt
src/unihan-db/unihan_db/: __about__.py  __init__.py  _compat.py  bootstrap.py  importer.py  tables.py  util.py
src/unihan-etl/: .coveragerc  .gitignore  .tmuxp.yaml  CHANGES  LICENSE  MANIFEST.in  Makefile  README.md  TODO  datapackage.json  exported.csv  pyproject.toml  setup.cfg
src/unihan-etl/.github/workflows/: publish-docs.yml
src/unihan-etl/docs/: FAQ.md  Makefile  api.md  cli.md  conf.py  index.md  manifest.json
src/unihan-etl/docs/_ext/: changelog.py
src/unihan-etl/tests/: conftest.py  test_expansion.py  test_unihan.py  test_util.py
src/unihan-etl/tests/fixtures/: Unihan_DictionaryIndices.txt  Unihan_OtherMappings.txt  Unihan_RadicalStrokeCounts.txt  Unihan_Readings.txt  Unihan_Variants.txt
src/unihan-etl/unihan_etl/: __about__.py  __main__.py  _compat.py  constants.py  expansion.py  process.py  test.py  util.py
tests/: __init__.py  conftest.py  test_bootstrap.py  test_cihai.py  test_cli.py  test_conf.py  test_config.py  test_config.yml  test_conversion.py  test_datasets.py  test_examples.py  test_exc.py  test_extend.py  test_extensions.py  test_pytest_plugin.py  test_unihan.py  test_util.py  test_utils.py  types.py
tests/data/: __init__.py
tests/fixtures/: Unihan_DictionaryIndices.txt  Unihan_DictionaryLikeData.txt  Unihan_IRGSources.txt  Unihan_NumericValues.txt  Unihan_OtherMappings.txt  Unihan_RadicalStrokeCounts.txt  Unihan_Readings.txt  Unihan_Variants.txt
tests/unihan/: test_bootstrap.py
(+51 files in other folders)
