[tool.black]
skip-string-normalization = true

[tool.poetry]
name = "unihan_db"
version = "0.3.0"
description = "SQLAlchemy models for UNIHAN database"
license = "MIT"
authors = ["Tony Narlock <tony@git-pull.com>"]
classifiers = [
  'Development Status :: 4 - Beta',
  "License :: OSI Approved :: MIT License",
  'Environment :: Web Environment',
  'Intended Audience :: Developers',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: Implementation :: PyPy',
  "Topic :: Database",
  "Topic :: Utilities",
  "Topic :: Software Development :: Internationalization"
]
keywords = ["unihan", "sqlalchemy", "cjk"]

readme = 'README.md'
packages = [
    { include = "unihan_db" }
]

homepage = "https://unihan-db.git-pull.com"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cihai/unihan-db/issues"
Documentation = "https://unihan-db.git-pull.com"
Repository = "https://github.com/cihai/unihan-db"


[tool.poetry.dependencies]
python = "^3.6"
appdirs = "*"
SQLAlchemy = "*"
unihan-etl = "~=0.11.0"

[tool.poetry.dev-dependencies]
### Docs ###
sphinx = "*"
alagitpull = "^0.1.0"
sphinx-issues = "^1.2.0"
sphinx-autodoc-typehints = "^1.12.0"
myst_parser = "^0.15.0"

### Testing ###
pytest = "*"
pytest-rerunfailures = "*"

### Coverage ###
codecov = "*"
coverage = "*"
pytest-cov = "*"

### Format ###
black = {version="==21.6b0", python="^3.6.2"}
isort = "*"

### Lint ###
flake8 = "*"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-issues", "myst_parser", "alagitpull", "sphinx-autodoc-typehints"]
test = ["pytest", "pytest-rerunfailures"]
coverage = ["codecov", "coverage", "pytest-cov"]
format = ["black", "isort"]
lint = ["flake8"]
